--- a/src/components/featured-post-list/featured-post-list.html
+++ b/src/components/featured-post-list/featured-post-list.html
@@ -1,4 +1,4 @@
-<div class="post-list-wrapper container-fluid mb-3">
+<div class="post-list-wrapper container-fluid mb-3" v-if="featuredPostData.length">
   <div class="row">
     <div class="col-12">
       <div class="container">
