--- a/src/components/garages-form/garages-form.html
+++ b/src/components/garages-form/garages-form.html
@@ -100,7 +100,7 @@
           </div>
 
           <div class="col-12 mb-3 mt-3">
-            <label>Open Times <span>*</span></label>
+            <label>Working Hours <span>*</span></label>
             <!-- prettier-ignore -->
             <OpenTimes :error="newGarageValidation.openTimes"
             errorText="Choose timings for all days" :selectedValue="newGarage.openTimes" @value="updateGarageData('openTimes', $event)" />
