--- a/src/components/location-map-instructions/location-map-instructions.html
+++ b/src/components/location-map-instructions/location-map-instructions.html
@@ -7,6 +7,15 @@
   ></template>
 
   <template v-slot:body>
+    <p>
+      <strong>
+        <em
+          >Note: This map embed option is only available from desktop version of
+          google maps. (Google only provides the embed option from desktop. Not
+          from mobile app.)</em
+        ></strong
+      >
+    </p>
     <ol>
       <li>Go to the Google Maps website.</li>
       <li>Search for the location you want to feature in your embedded map.</li>
