--- a/src/components/post-filter/post-filter.html
+++ b/src/components/post-filter/post-filter.html
@@ -88,7 +88,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Seller Type</label>
         <!-- prettier-ignore -->
-        <Select :options="utils.sellerTypes()" placeholder="Select Seller Type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
+        <Select :options="utils.filterSellerTypes()" placeholder="Select Seller Type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
       </div>
     </div>
 
@@ -160,7 +160,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Seller type </label>
         <!-- prettier-ignore -->
-        <Select :options="utils.sellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
+        <Select :options="utils.filterSellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
       </div>
     </div>
 
@@ -206,7 +206,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Seller type </label>
         <!-- prettier-ignore -->
-        <Select :options="utils.sellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
+        <Select :options="utils.filterSellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
       </div>
 
       <div class="col-12 col-lg-3 filter-column">
@@ -316,7 +316,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Seller type </label>
         <!-- prettier-ignore -->
-        <Select :options="utils.sellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
+        <Select :options="utils.filterSellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
       </div>
     </div>
 
@@ -372,7 +372,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Seller type </label>
         <!-- prettier-ignore -->
-        <Select :options="utils.sellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
+        <Select :options="utils.filterSellerTypes()" placeholder="Select Seller type" @selectValue="updateFilterData('sellerType', $event)" :selected="filterData.sellerType" />
       </div>
 
       <div class="col-12 col-lg-3 filter-column">
