--- a/src/App.scss
+++ b/src/App.scss
@@ -6,8 +6,21 @@
   max-height: calc(100vh - 155px);
   overflow-y: auto;
   overflow-x: hidden;
+  // &::-webkit-scrollbar {
+  //   display: none;
+  // }
+
   &::-webkit-scrollbar {
-    display: none;
+    width: 0.25em;
+  }
+
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $purple-70;
+    border-radius: 5px;
   }
 }
 
@@ -15,4 +28,17 @@
   .main {
     max-height: calc(100vh - 125px);
   }
+}
+
+::-webkit-scrollbar {
+  width: 0.25em;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $purple-70;
+  border-radius: 5px;
 }
