--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -40,6 +40,7 @@
         position: relative;
         margin: 10px 0;
         font-size: 1rem;
+        padding-right: 10px;
       }
       .popup-footer {
         min-height: 40px;
