--- a/src/components/garage-details/garage-details.scss
+++ b/src/components/garage-details/garage-details.scss
@@ -240,4 +240,56 @@
       display: none;
     }
   }
+
+  .shareIcon {
+    position: fixed;
+    right: 0;
+    top: 250px;
+    background-color: $white;
+    padding: 10px;
+    border-radius: 5px 0 0 5px;
+    width: 45px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: $shadow-small;
+    z-index: 9;
+    &:hover {
+      box-shadow: $shadow-purple;
+    }
+    svg {
+      font-size: 1.2rem;
+      color: $purple;
+    }
+  }
+  .share-modal {
+    ::v-deep .popup-header {
+      > div {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        svg {
+          font-size: 1.2rem;
+          cursor: pointer;
+        }
+      }
+    }
+    ::v-deep .popup-body {
+      .icon-wrapper {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 30px;
+        flex-wrap: wrap;
+        img {
+          max-width: 80px;
+          cursor: pointer;
+        }
+      }
+    }
+    ::v-deep .popup-footer {
+      display: none;
+    }
+  }
 }
