--- a/src/components/rental-list/rental-list.scss
+++ b/src/components/rental-list/rental-list.scss
@@ -65,6 +65,7 @@
           transform: translate3d(0, 0, 0);
           .VueCarousel-slide {
             width: 100% !important;
+            flex-basis: 100% !important;
             -webkit-overflow-scrolling: touch;
           }
         }
