--- a/src/components/seller-profile/seller-profile.scss
+++ b/src/components/seller-profile/seller-profile.scss
@@ -94,8 +94,8 @@
       img {
         max-width: 100px;
         max-height: 100px;
-        min-width: 100px;
-        min-height: 100px;
+        // min-width: 100px;
+        // min-height: 100px;
         object-fit: cover;
       }
       .phone {
