--- a/src/views/lease-a-car-details/lease-a-car-details.html
+++ b/src/views/lease-a-car-details/lease-a-car-details.html
@@ -31,10 +31,27 @@
     </template>
     <template v-slot:body>
       <div class="icon-wrapper">
-        <img src="../../assets/facebook.png" class="icon facebook" />
-        <img src="../../assets/twitter.png" class="icon twitter" />
-        <img src="../../assets/whatsapp.png" class="icon whatsapp" />
-        <img src="../../assets/email.png" class="icon email" />
+        <ShareNetwork network="facebook" :url="shareUrl">
+          <img
+            src="../../assets/facebook.png"
+            class="icon facebook"
+          />
+        </ShareNetwork>
+        <ShareNetwork network="twitter" :url="shareUrl">
+          <img src="../../assets/twitter.png" class="icon twitter" />
+        </ShareNetwork>
+        <ShareNetwork network="whatsapp" :url="shareUrl">
+          <img
+            src="../../assets/whatsapp.png"
+            class="icon whatsapp"
+          />
+        </ShareNetwork>
+        <ShareNetwork network="linkedin" :url="shareUrl">
+          <img
+            src="../../assets/linkedin.png"
+            class="icon linkedin"
+          />
+        </ShareNetwork>
       </div>
     </template>
   </Modal>
@@ -42,7 +59,7 @@
     <div class="col-12 col-lg-8">
       <div class="shadow-container p-3 mb-3">
         <div class="header">
-          <h4>{{leaseData.name}}</h4>
+          <h4>{{leaseData.company}} {{leaseData.model}} {{leaseData.make}}</h4>
           <!-- <div class="rental-price">
             AED {{getPrice(leaseData.price).price}}<span
               >/{{getPrice(leaseData.price).per}} year</span
