--- a/src/views/post-details/post-details.html
+++ b/src/views/post-details/post-details.html
@@ -84,10 +84,27 @@
               </template>
               <template v-slot:body>
                 <div class="icon-wrapper">
-                  <img src="../../assets/facebook.png" class="icon facebook" />
-                  <img src="../../assets/twitter.png" class="icon twitter" />
-                  <img src="../../assets/whatsapp.png" class="icon whatsapp" />
-                  <img src="../../assets/email.png" class="icon email" />
+                  <ShareNetwork network="facebook" :url="shareUrl">
+                    <img
+                      src="../../assets/facebook.png"
+                      class="icon facebook"
+                    />
+                  </ShareNetwork>
+                  <ShareNetwork network="twitter" :url="shareUrl">
+                    <img src="../../assets/twitter.png" class="icon twitter" />
+                  </ShareNetwork>
+                  <ShareNetwork network="whatsapp" :url="shareUrl">
+                    <img
+                      src="../../assets/whatsapp.png"
+                      class="icon whatsapp"
+                    />
+                  </ShareNetwork>
+                  <ShareNetwork network="linkedin" :url="shareUrl">
+                    <img
+                      src="../../assets/linkedin.png"
+                      class="icon linkedin"
+                    />
+                  </ShareNetwork>
                 </div>
               </template>
             </Modal>
