--- a/src/views/rental-details/rental-details.html
+++ b/src/views/rental-details/rental-details.html
@@ -34,10 +34,18 @@
     </template>
     <template v-slot:body>
       <div class="icon-wrapper">
-        <img src="../../assets/facebook.png" class="icon facebook" />
-        <img src="../../assets/twitter.png" class="icon twitter" />
-        <img src="../../assets/whatsapp.png" class="icon whatsapp" />
-        <img src="../../assets/email.png" class="icon email" />
+        <ShareNetwork network="facebook" :url="shareUrl">
+          <img src="../../assets/facebook.png" class="icon facebook" />
+        </ShareNetwork>
+        <ShareNetwork network="twitter" :url="shareUrl">
+          <img src="../../assets/twitter.png" class="icon twitter" />
+        </ShareNetwork>
+        <ShareNetwork network="whatsapp" :url="shareUrl">
+          <img src="../../assets/whatsapp.png" class="icon whatsapp" />
+        </ShareNetwork>
+        <ShareNetwork network="linkedin" :url="shareUrl">
+          <img src="../../assets/linkedin.png" class="icon linkedin" />
+        </ShareNetwork>
       </div>
     </template>
   </Modal>
@@ -45,7 +53,7 @@
     <div class="col-12 col-lg-8">
       <div class="shadow-container p-3 mb-3">
         <div class="header">
-          <h4>{{rentalData.name}}</h4>
+          <h4>{{rentalData.brand}} {{rentalData.model}} {{rentalData.make}}</h4>
           <div class="rental-price">
             AED {{getPrice(rentalData.price).price}}<span
               >/{{getPrice(rentalData.price).per}}</span
