--- a/src/views/search/search.scss
+++ b/src/views/search/search.scss
@@ -25,7 +25,7 @@
     }
     .display-image {
       max-width: 100px;
-      height: fit-content;
+      height: max-content;
       margin-right: 20px;
     }
   }
