--- a/src/views/user-profile-edit/user-profile-edit.html
+++ b/src/views/user-profile-edit/user-profile-edit.html
@@ -34,6 +34,28 @@
             </div>
 
             <div class="col-12 mb-3">
+              <label
+                >Location Map
+                <span
+                  class="map-instructions"
+                  role="button"
+                  @click="showLocationInstructions"
+                  >How To Get Map?</span
+                ></label
+              >
+              <!-- prettier-ignore -->
+              <TextArea
+                    class="inputText"
+                    placeholder="Enter Location Map"
+                    :error="registerValidation.locationMap"
+                    errorText="Enter Valid Location Map"
+                    @value="updateUserDetails('locationMap', $event)"
+                    id="locationMap"
+                    :value="individualUserDetails.locationMap"
+                  />
+            </div>
+
+            <div class="col-12 mb-3">
               <label>Contact Number <span>*</span></label>
               <!-- prettier-ignore -->
               <InputText class="inputText" :error="registerValidation.contactNumber"
@@ -159,6 +181,28 @@
             </div>
 
             <div class="col-12 mb-3">
+              <label
+                >Location Map
+                <span
+                  class="map-instructions"
+                  role="button"
+                  @click="showLocationInstructions"
+                  >How To Get Map?</span
+                ></label
+              >
+              <!-- prettier-ignore -->
+              <TextArea
+                    class="inputText"
+                    placeholder="Enter Location Map"
+                    :error="registerValidation.locationMap"
+                    errorText="Enter Valid Location Map"
+                    @value="updateUserDetails('locationMap', $event)"
+                    id="locationMap"
+                    :value="companyUserDetails.locationMap"
+                  />
+            </div>
+
+            <div class="col-12 mb-3">
               <label>Social media links (if any)</label>
               <!-- prettier-ignore -->
               <InputText class="inputText" placeholder="Enter Facebook url" id="facebook"
@@ -207,4 +251,9 @@
       </div>
     </div>
   </div>
+  <LocationMapInstructions
+    class="medium"
+    v-if="showLocationModal"
+    @close="closeReviewModal"
+  />
 </div>
